--- a/CustomDialogLibrary/Views/BaseDialogWindow.axaml
+++ b/CustomDialogLibrary/Views/BaseDialogWindow.axaml
@@ -26,7 +26,7 @@
          <viewModels:BaseDialogWindowViewModel/>
     </Design.DataContext>
     
-    <TransitioningContentControl Content="{Binding MainDialogViewModel}"
+    <TransitioningContentControl Content="{Binding DialogViewModel}"
                                  Name="GeneralControl"/>
     
 </Window>
