--- a/CustomDialogLibrary/Views/DialogView.axaml
+++ b/CustomDialogLibrary/Views/DialogView.axaml
@@ -174,6 +174,7 @@
                       Margin="0, 10"
                       Name="ComboBoxFilters"
                       Width="{Binding #BodyBorder.Bounds.Width}"
+                      SelectedValue="{Binding ContentVm.Filter, Converter={StaticResource FilterConverter}}"
                       ItemsSource="{Binding Filters, Converter={StaticResource FilterConverter}}">
                 
                 <i:Interaction.Behaviors>
